--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -3,5 +3,9 @@ body,
 #root {
   margin: 0;
   height: 100%;
-  background-color: #eeeeee;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
 }
